fix sidebar overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,5 @@
 
 body {
   margin: 0;
-  /* overflow: hidden; */
-}
-
-/* Added in HopeUI */
-:focus {
-  box-shadow: none !important;
+  overflow: hidden;
 }
